just the target

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ docker_image_dynamic:
   variables:
     DOCKER_IMAGE_CURRENT: "${CI_REGISTRY_IMAGE}:${CI_BUILD_REF_SLUG}_${CI_PIPELINE_ID}"
     DOCKER_IMAGE_LATEST:  "${CI_REGISTRY_IMAGE}:latest"
-    DOCKER_BUILD_TARGET: make build-dynamic-image
+    DOCKER_BUILD_TARGET: build-dynamic-image
   script:
   - make build-dynamic-release
   - *DOCKER_BUILD
@@ -30,7 +30,7 @@ docker_image_static:
   variables:
     DOCKER_IMAGE_CURRENT: "${CI_REGISTRY_IMAGE}:static_${CI_BUILD_REF_SLUG}_${CI_PIPELINE_ID}"
     DOCKER_IMAGE_LATEST:  "${CI_REGISTRY_IMAGE}:static_latest"
-    DOCKER_BUILD_TARGET: make build-static-image
+    DOCKER_BUILD_TARGET: build-static-image
   script:
   - rustup target add x86_64-unknown-linux-musl
   - make build-static-release
